fixed offset issue caused by scrollbar

--- a/themes/fullstackdigital/assets/scss/noncritical/work/_grid_item.scss
+++ b/themes/fullstackdigital/assets/scss/noncritical/work/_grid_item.scss
@@ -66,13 +66,14 @@
   opacity: 0;
   visibility: hidden;
   position: fixed;
-  // overflow-y: scroll;
+  overflow-y: scroll;
   top: 0;
   left: 0;
   right: 0;
   width: 100%;
   height: 100%;
 }
+//.work-ajax::-webkit-scrollbar {display:none;}
 .work-grid.row-2 {
   grid-template-columns: 1fr 1fr;
 }
